<resources>
    <string name="app_name">Onnea</string>

    <!--    Login & Register-->
    <string name="login">Login</string>
    <string name="to_register">Don\'t have an account yet?</string>
    <string name="register">Create an Account</string>
    <string name="to_login">Already have an account?</string>
    <string name="sign_in">Signing in…</string>
    <string name="please_wait">Please wait…</string>
    <string name="u_name">Name</string>
    <string name="u_email">Email</string>
    <string name="u_password">Password</string>
    <string name="u_password_2">Repeat Password</string>
    <string name="pass_diff">Your repeated password is different</string>
    <string name="email_valid">Please enter valid email</string>

    <!--    Navigation & Description-->
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_catering">Catering</string>
    <string name="title_profile">Profile</string>
    <string name="desc_next">Next</string>
    <string name="desc_previous">Previous</string>
    <string name="desc_add">Add</string>
    <string name="desc_remove">Remove</string>

    <!--    Profile-->
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="number">00</string>
    <string name="age">Age (years old)</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Sign Out</string>

    <!--    Home-->
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="day_format">dd MMMM yyyy</string>
    <string name="water">Water</string>
    <string name="water_needed">...</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="food_name">Food name</string>
    <string name="kcal">00 kcal</string>
    <string name="g">00 g</string>
    <string name="kcal2"> / 00 kcal</string>
    <string name="g2"> / 00 g</string>
    <string name="title_recommendations">Food You Might Like</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>

    <!--    Questions-->
    <string name="q_name">What is your name?</string>
    <string name="q_date_of_birth">When were you born?</string>
    <string name="q_date_format">DD MM YYYY</string>
    <string name="q_gender">What is your gender?</string>
    <string name="q_male">Male</string>
    <string name="q_female">Female</string>
    <string name="q_weight">Weight</string>
    <string name="q_height">Height</string>
    <string name="q_kg">kg</string>
    <string name="q_cm">cm</string>
    <string name="q_physic">How physically active are you in your daily life?</string>
    <string name="q_physic_1">Not Active</string>
    <string name="q_physic_2">Light Active</string>
    <string name="q_physic_3">Moderate Active</string>
    <string name="q_physic_4">Active</string>
    <string name="q_physic_5">Very Active</string>
    <string name="q_goal">What is your weight-related goals?</string>
    <string name="q_goal_1">Losing weight</string>
    <string name="q_goal_2">Maintaining weight</string>
    <string name="q_goal_3">Gaining weight</string>
    <string name="q_habit">Do you have any specific eating habit or dietary preferences?</string>
    <string name="q_habit_1">Vegetarian</string>
    <string name="q_habit_2">Vegan</string>
    <string name="q_habit_3">Pescatarian</string>
    <string name="q_habit_4">Gluten-free</string>
    <string name="q_habit_5">Ketogenic</string>
    <string name="q_habit_6">Lacto-vegetarian</string>
    <string name="q_habit_7">Ovo-vegetarian</string>
    <string name="q_habit_8">Paleo</string>
    <string name="q_habit_9">Primal</string>
    <string name="q_habit_10">No</string>
    <string name="q_allergy">Do you have any food allergies?</string>
    <string name="q_allergy_1">Egg</string>
    <string name="q_allergy_2">Gluten</string>
    <string name="q_allergy_3">Garin</string>
    <string name="q_allergy_4">Peanut</string>
    <string name="q_allergy_5">Seafood</string>
    <string name="q_allergy_6">Sesame</string>
    <string name="q_allergy_7">Shellfish</string>
    <string name="q_allergy_8">Soy</string>
    <string name="q_allergy_9">Sulfite</string>
    <string name="q_allergy_10">Tree nut</string>
    <string name="q_allergy_11">Wheat</string>
    <string name="q_allergy_12">Dairy</string>
    <string name="q_yes_allergy">Yes, I have food allergies</string>
    <string name="q_no_allergy">No, I don\'t have any food allergies</string>
    <string name="q_spicy">On a scale from 0 to 5, how much do you like spicy food?</string>
    <string name="q_spicy_0">I don\'t like it</string>
    <string name="q_spicy_5">I love it!</string>
    <string name="q_fruit">On a scale from 0 to 5, how often do you eat fruits?</string>
    <string name="q_fruit_0">Not at all</string>
    <string name="q_fruit_5">Everyday</string>
    <string name="q_health">On a scale from 0 to 5, how often do you eat healthy food?</string>
    <string name="q_next">Next</string>
    <string name="q_finish">Finish</string>

    <!--    Discover-->
    <string name="search_for_food">Search for food</string>
    <string name="search_name">Food\'s name</string>
    <string name="search_photo">Food\'s photo</string>
    <string name="camera">Add from Camera</string>
    <string name="gallery">Add from Gallery</string>

    <!--    Catering-->
    <string name="catering_name">Catering\'s Name</string>
    <string name="catering_loc">Catering\'s Location</string>
    <string name="catering_rate">Catering\'s Rate</string>
    <string name="catering_rate_icon">Catering\'s Rate Icon</string>
    <string name="wazap">Chat in WhatsApp</string>
    <string name="price">Price starts from</string>
    <string name="rp">Rp 0.00,-</string>
    <string name="menu">Menu</string>
    <string name="tnc">Terms and Conditions</string>

    <!--    Add-->
    <string name="a_food_name">Food\'s name</string>
    <string name="ready_in">Ready in 0 minutes</string>
    <string name="nutrients">Nutrition</string>
    <string name="unit">Unit</string>
    <string name="daily_needs">Daily needs:</string>
    <string name="carbo">Carbohydrates</string>
    <string name="add_food">Save new food</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>