<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.Q6Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnQ6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:text="@string/q_next"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rdoHabit"
                app:layout_constraintStart_toStartOf="@+id/rdoHabit"
                app:layout_constraintTop_toBottomOf="@+id/rdoHabit"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView12"
                style="@style/RegularText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/q_habit"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/rdoHabit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioGroup
                android:id="@+id/rdoHabit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rdoVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_1"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoVegan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_2"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoPescatarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_3"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoGlutenFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_4"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoKetogenic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_5"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoLactoVeg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_6"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoOvoVeg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_7"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoPaleo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_8"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoPrimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_9"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoNoHabit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_habit_10"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>