<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.Q4Fragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnQ4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:text="@string/q_next"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rdoPhysic"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView9"
                style="@style/RegularText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/q_physic"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/rdoPhysic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioGroup
                android:id="@+id/rdoPhysic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rdoNotActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_physic_1"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoLightActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_physic_2"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoModerateActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_physic_3"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_physic_4"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

                <RadioButton
                    android:id="@+id/rdoVeryActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/radio_selector"
                    android:button="@null"
                    android:padding="16dp"
                    android:text="@string/q_physic_5"
                    android:textAlignment="center"
                    android:textColor="@drawable/radio_text" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>